Revert "Bug 1954427, Bug 1974686, Bug 1973976, Bug 1936429, 1898895, Bug 1873166, Bug 1993201 - add an Android-only UA override for eolno.nokas.com to get their mobile layout; r=webcompat-reviewers,ksenia" for causing bc failures on browser_parsable_css.js
This reverts commit 4fe8c4e9ffe2ad25bd7278dcf4159aa3567cd6be.

Revert "Bug 1974686 - add a CSS webcompat intervention for www.hermes.admin.ch; r=webcompat-reviewers,ksenia"

This reverts commit 813b75b82462b89abc58dbc251c2b553fb8282d1.

Revert "Bug 1973976 - add a CSS webcompat intervention for iweather.gov.vn; r=webcompat-reviewers,ksenia"

This reverts commit 7d589adb41574ddc83eef54a982c53aff8c52175.

Revert "Bug 1936429 - add a CSS intervention for diadora.com to hide extra scrollbars; r=webcompat-reviewers,ksenia"

This reverts commit 0dd03dceb8a1fcc0f584acad0fa0348122af3c63.

Revert "Bug 1898895 - add an Android-only UA override for eslatam.trygalaxy.com; r=webcompat-reviewers,ksenia"

This reverts commit ea18f3782f55eb028c944684f0f0d439f4d52304.

Revert "Bug 1873166 - update our webcompat intervention for nsandi.com; r=webcompat-reviewers,ksenia"

This reverts commit 81a22c8a57e5df0ec64f525ccaa9775d57dc334b.

Revert "Bug 1993201 - add a UA override for portal.pilot.ly; r=webcompat-reviewers,ksenia"

This reverts commit 15b052cacc1b0547649881fa45b908fade8a38ed.

--- a/browser/extensions/webcompat/injections/css/bug1873166-nsandi.com-hide-unsupported-message.css
+++ b/browser/extensions/webcompat/injections/css/bug1873166-nsandi.com-hide-unsupported-message.css
@@ -13,7 +13,6 @@
  * yet the message remains. This intervention hides that message.
  */
 .browser-warning-fade,
-#unsupported-browser,
 #unsupported_browser {
   display: none !important;
 }
